Updated the solution to .NET 7 to use a better rate limiting policy and added batches processing to hacker news details method

--- a/HackerNewsAPI/appsettings.json
+++ b/HackerNewsAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "RateLimit": {
+    "PermitLimit": 3,
+    "TimeWindowSeconds": 12,
+    "QueueLimit": 0
+  },
   "HackerNews": {
     "ApiHost": "https://hacker-news.firebaseio.com/v0/"
   },
